--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -23,7 +23,7 @@
                     <a href="/users/sign_in">Sign In</a>
                 </li>
                 <li>
-                    <a href="/user/sign_up">Sign Up</a>
+                    <a href="/users/sign_up">Sign Up</a>
                 </li>
         
                 <% } %>
