create interview form

--- a/views/placement_cell.ejs
+++ b/views/placement_cell.ejs
@@ -23,7 +23,7 @@
 
         <div id="interview_section_detail">This section help you to manage Interview Yard like adding interview detail and list of the interview and inteview with student list</div> 
 
-        <form action="/students/details">
+        <form action="/interviews/details">
 
             <input type="submit" value="Explore">
 
