--- a/views/interview_manager.ejs
+++ b/views/interview_manager.ejs
@@ -3,37 +3,41 @@
 <!-- display the created interview details -->
 <div class="container">
     <% for(interview of interviews) { %>
-    <div class="sub-container" id="<%= interview._id %>">
+      <a href="/interviews/allocate_form/<%= interview._id %>">
+        
+        <div class="sub-container" id="interview-<%= interview._id %>">
 
-        <div id="company-image">
-            <img src="/IMAGE/company.png" alt="" height="150" width="150">
-        </div>
-
-        <div class="details">
-        <label>Company Name:</label> &nbsp;&nbsp; <span><%= interview.companyName %></span>
-        </div>
-
-        <div class="details">
-        <label>Role:</label> &nbsp;&nbsp; <span><%= interview.role %></span>
-        </div>
-
-        <div class="details">
-        <label>Address:</label> &nbsp;&nbsp; <span><%= interview.address %></span>
-        </div>
-
-        <div class="details">
-        <label>Date:</label> &nbsp;&nbsp; <span><%= new Date(interview.date).toISOString().split('T')[0] %></span>
-        </div>
-
-        <a href=""  class="delete-student" >
-            <input type="button" value="Delete" id="interview_delete">
-        </a>
-
-        <a href="" >
-            <input type="submit" value="Allocate To Student" id="interview_allocation">
-        </a> 
+          <div id="company-image">
+              <img src="/IMAGE/company.png" alt="" height="150" width="150">
+          </div>
+  
+          <div class="details">
+          <label>Company Name:</label> &nbsp;&nbsp; <span><%= interview.companyName %></span>
+          </div>
+  
+          <div class="details">
+          <label>Role:</label> &nbsp;&nbsp; <span><%= interview.role %></span>
+          </div>
+  
+          <div class="details">
+          <label>Address:</label> &nbsp;&nbsp; <span><%= interview.address %></span>
+          </div>
+  
+          <div class="details">
+          <label>Date:</label> &nbsp;&nbsp; <span><%= new Date(interview.date).toISOString().split('T')[0] %></span>
+          </div>
+  
+          <a href="/interviews/delete/<%= interview._id %>" data-id="<%= interview._id %>" class="delete-interview">
+              <input type="button" value="Delete" id="interview_delete">
+          </a>
+  
+          <a href="/interviews/allocate_form/<%= interview._id %>">
+              <input type="submit" value="Allocate To Student" id="interview_allocation">
+          </a> 
+      
+      </div>
+    </a>
     
-    </div>
 <%}%>
 </div>
 
@@ -70,3 +74,4 @@
   </div>
 
   <script src="/JAVASCRIPT/interview_add.js"></script>
+  <script src="/JAVASCRIPT/interview_delete.js"></script>
