--- a/assets/CSS/placement_cell.css
+++ b/assets/CSS/placement_cell.css
@@ -18,7 +18,7 @@
     height: 300px;
     width: 300px;
 
-    box-shadow: 1px 1px 2px 2px chartreuse;
+    box-shadow: 1px 1px 8px 2px chartreuse;
 
     text-align: justify;
     padding: 5px;
@@ -30,7 +30,7 @@
 
     background-image: linear-gradient(to bottom, rgb(51, 51, 247), rgb(98, 52, 212));
 
-
+    border-radius: 25px;
 }
 
 #student_manager:hover{
@@ -42,7 +42,7 @@
     height: 300px;
     width: 300px;
 
-    box-shadow: 1px 1px 2px 2px chartreuse;
+    box-shadow: 1px 1px 8px 2px chartreuse;
 
     text-align: justify;
     padding: 5px;
@@ -53,6 +53,8 @@
     letter-spacing: 2px;
 
     background-image: linear-gradient(to bottom, rgb(51, 51, 247), rgb(98, 52, 212));
+
+    border-radius: 25px;
 
 }
 
