interview allocation display successfully

--- a/assets/CSS/allocate_interview.css
+++ b/assets/CSS/allocate_interview.css
@@ -2,10 +2,10 @@
 .form-container {
     position: absolute;
     right: 20px;
+    top:15%;
 
     width: 400px;
-
-    margin: 50px auto;
+    
     padding: 20px;
 
     background-color: #fff;
@@ -67,9 +67,117 @@
      background-image: linear-gradient(to right, rgb(225, 80, 80), rgb(73, 73, 231));
   }
 
-  .form-group input:hover{
+  .form-group select {
+    background-image: linear-gradient(to right,  rgb(150, 96, 237), rgb(161, 72, 216));
+ }
+ .form-group select:hover {
+  background-image: linear-gradient(to right, rgb(161, 72, 216), rgb(150, 96, 237));
+}
+option{
+  background-color: black;
+}
+
+.form-group input:hover{
     background-image: linear-gradient(to right, rgb(161, 72, 216), rgb(150, 96, 237));
   }
-  .form-group select:hover{
-    background-image: linear-gradient(to right, rgb(161, 72, 216), rgb(150, 96, 237));
+
+  /* this is my update status button styling */
+  .update_submit{
+    position: relative;
+    left: 650px;
+    top:10px;
   }
+
+  /* interview details container style  */
+.student-container {
+  position: absolute;
+  left: 10px;
+  top:15%;
+  background-color: black;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgb(255, 0, 179);
+  width: 800px;
+
+  color: white;
+}
+
+.sub-container{
+  box-shadow: 0 4px 8px chartreuse;
+  padding: 10px;
+  margin-top: 20px;
+
+  border-radius: 20px;
+}
+
+.info {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.status{
+  
+  position: absolute;
+  right: 20px;
+  display: flex;
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+.status>div{
+ display: inline-block;
+ height: 10px;
+ width: 10px;
+ margin: 2px;
+  padding: 10px;
+ border-radius: 50%;
+ 
+}
+
+#red{
+  background-color: red;
+}
+#orange{
+  background-color: orange;
+}
+#green{
+  background-color: green;
+}
+
+/* style for each interview status */
+.int_status{
+  position: absolute;
+  right: 30px;
+  padding: 10px;
+  border-radius: 50%;
+}
+/* this style for hold interview */
+#fail_status{
+  background-color: red;
+}
+/* this style for hold interview */
+#hold_status{
+  background-color: orange;
+  animation: blink 0.5s infinite alternate;
+}
+
+@keyframes blink {
+  from {
+      opacity: 1;
+  }
+
+  to {
+      opacity: 0.5;
+  }
+}
+
+/* this style for pass interview */
+#pass_status{
+  background-color: green;
+}
+
+
