--- a/views/interview_manager.ejs
+++ b/views/interview_manager.ejs
@@ -24,7 +24,7 @@
           </div>
   
           <div class="details">
-          <label>Date:</label> &nbsp;&nbsp; <span><%= new Date(interview.date).toISOString().split('T')[0] %></span>
+          <label>Interview Date:</label> &nbsp;&nbsp; <span><%= new Date(interview.date).toISOString().split('T')[0] %></span>
           </div>
   
           <a href="/interviews/delete/<%= interview._id %>" data-id="<%= interview._id %>" class="delete-interview">
@@ -64,7 +64,7 @@
         <textarea id="address" name="address" rows="2" cols="45" required placeholder="Location"></textarea>
       </div>
       <div class="form-group">
-        <label for="date">Date</label>
+        <label for="date">Interview Date</label>
         <input type="date" id="date" name="date" required>
       </div>
       <div class="form-group">
