--- a/assets/CSS/student_details.css
+++ b/assets/CSS/student_details.css
@@ -39,13 +39,13 @@ h1{
 /* interview details container style  */
 .interview-container {
     position: absolute;
-    right: 10px;
+    right: 1%;
 
     background-color: black;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgb(255, 0, 179);
-    width: 450px;
+    width: 35%;
     margin: 0 auto;
 
     color: white;
