--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -13,7 +13,7 @@
             <ul>
                 <% if (locals.user){ %>
                 <li>
-                    <a href="/users/profile"><%= user.name %></a>
+                    <a href="/placement/manager"><%= user.name %></a>
                 </li>
                 <li>
                     <a href="/users/sign_out">Sign Out</a>
