--- a/views/student_details.ejs
+++ b/views/student_details.ejs
@@ -49,7 +49,7 @@
 </div>
 <div class="container">
     <div class="details-container" id="student-details">
-        <h1>Student Details</h1>
+        <h1>Personal Details</h1>
         <div class="details-content">
             <div><b>First Name:&nbsp;</b> <%= student.firstName %></div>
             <div><b>Last Name:&nbsp;</b> <%= student.lastName %></div>
