--- a/views/student_manager.ejs
+++ b/views/student_manager.ejs
@@ -3,6 +3,9 @@
 <div class="detail-container">
         <% for(let student of students) { %>
             <div id="student-<%= student._id %>" class="display_info">
+                <div id="student-image">
+                    <img src="/IMAGE/student.png" alt="" height="150" width="150">
+                </div>
                 <div class="info">
                     <label class="label">First Name:</label>
                     <span id="first-name" class="std_detail"><%= student.firstName %></span>
