--- a/assets/CSS/interview_manager.css
+++ b/assets/CSS/interview_manager.css
@@ -1,7 +1,7 @@
 /* This style for display container */
 .container {
     position: absolute;
-    width: 700px;
+    width: 50%;
     color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -89,9 +89,9 @@
 /* this style for inteview form */
 .form-container {
     position: absolute;
-    right: 20px;
+    right: 2%;
 
-    width: 400px;
+    width: 30%;
 
     margin: 50px auto;
     padding: 20px;
