--- a/assets/CSS/sign_up.css
+++ b/assets/CSS/sign_up.css
@@ -1,10 +1,10 @@
 #sing-up-container{
     position: absolute;
     top:120px;
-    right: 60px;
+    right: 3%;
 
     height: 450px;
-    width: 400px;
+    width: 30%;
 
     border: 1px dashed blueviolet;
     box-shadow: 1px 2px 8px 4px chartreuse;
