--- a/views/allocate_interview.ejs
+++ b/views/allocate_interview.ejs
@@ -81,7 +81,7 @@
       </div>
       
       <div class="form-group">
-        <button type="submit">Allocate</button>
+        <button type="submit" id="Allocate">Allocate</button>
       </div>
     </form>
   </div>
