download csv data complete

--- a/assets/CSS/student_details.css
+++ b/assets/CSS/student_details.css
@@ -1,4 +1,28 @@
+/* print csv data continer */
+#print-data-container{
+    margin-left:87%;
+}
 
+#print-csv-btn{
+    padding: 5px;
+    margin-bottom:10px;
+
+    border:0;
+    outline: 0;
+
+    border-radius: 10px;
+    background-image: linear-gradient(to right, rgb(236, 29, 29), rgb(23, 23, 230));
+
+    color: white;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+#print-csv-btn:hover{
+    background-image: linear-gradient(to right,rgb(23, 23, 230), rgb(236, 29, 29));
+}
+
+/* this container display the student personal and carrier details */
 .container {
     color: white;
     font-family: Arial, sans-serif;
