--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,32 @@
 
         <%- script %>
 
+        <% if (flash.success && flash.success.length > 0) { %>
+            <script>
+                new Noty({
+                    theme: 'relax',
+                    text: "<%= flash.success %>",
+                    type: 'success',
+                    layout: 'topRight',
+                    timeout: 1500
+                    
+                }).show(); 
+            </script>   
+            <%} %>
+            
+         <% if (flash.error && flash.error.length > 0) {%>
+                <script>
+                    new Noty({
+                        theme: 'relax',
+                        text: "<%= flash.error %>",
+                        type: 'error',
+                        layout: 'topRight',
+                        timeout: 1500
+                        
+                    }).show();  
+                </script>
+         <%} %>
+        
         
     </body>
 </html>
