--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -16,8 +16,12 @@
                     <a href="/placement/manager"><%= user.name %></a>
                 </li>
                 <li>
+                    <a href="/api/jobs">Jobs</a>
+                </li>
+                <li>
                     <a href="/users/sign_out">Sign Out</a>
                 </li>
+                
                 <% }else{ %>
                 <li>
                     <a href="/users/sign_in">Sign In</a>
